--- a/index.html
+++ b/index.html
@@ -14,20 +14,332 @@
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="about.css">
+  <link rel="stylesheet" href="program.css">
+  <link rel="stylesheet" href="team.css">
+  <link rel="stylesheet" href="format.css">
+
 </head>
 
 <body>
-  <div class="main">
+  <header>
+    <div class="header">
+      <div class="header-logo">
+        <img src="/images/logo.png" alt="logo">
+      </div>
+      <nav class="header-nav">
+        <ul class="header-nav-list">
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Очное обучение</a>
+            <button class="header-nav-link-arrow">
+              <img src="/images/chevron-down.png" alt="">
+            </button>
+          </li>
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Online-обучение</a>
+          </li>
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Наши проекты</a>
+            <button class="header-nav-link-arrow">
+              <img src="/images/chevron-down.png" alt="">
+            </button>
+          </li>
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Мероприятия</a>
+          </li>
+          <li class="header-nav-item"><a href="#" class="header-nav-link">Об Академии</a>
+            <button class="header-nav-link-arrow">
+              <img src="/images/chevron-down.png" alt="">
+            </button>
+          </li>
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Контакты</a>
+          </li>
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">
+              <button class="header-nav-link-button">
+                <img src="/images/Frame-338362.png" alt="">
+              </button>
+            </a>
+          </li>
 
+        </ul>
+      </nav>
+      <a class="header-nav-item header-nav-item--phone"><a href="#" class="header-nav-link">+38 (044) 537 22 60</a>
+        <button class="header-nav-link-arrow">
+          <img src="/images/chevron-down.png" alt="">
+        </button>
+      </a>
+  </header>
+  <section class="main">
+    <img src="/images/Ellipse.png" alt="ellipse">
+    <div class="text-block">
+      <h1 class="text-block-title">Компьютерная
+        графика и дизайн</h1>
+      <p class="text-block-text">Научим зарабативать на своем творчестве</p>
+      <button class="text-block-button">Записаться на курс</button>
+    </div>
     <div class="men-block">
-      <img src="/images/Men.png" alt="" srcset="">
+      <img src="/images/Group-22513.png" alt="img" srcset="">
+    </div>
+  </section>
+  <section class="about">
+    <h2 class="about-title">Коротко о курсе</h2>
+    <p class="about-text">Если вы ищете творческую современную профессию тогда этот курс для вас. Мы научим вас как
+      создавать сайты и мобильные приложение, работать с видео и анимацией, рисовать иллюстрации. Вы научитесь работать
+      в 3D: создавать персонажей, игровые локации, интерьеры та экстерьеры. Мы поможем освоить все необходимые
+      инструменты с нуля.</p>
+
+    <video class="about-video" width="1060" height="600" controls>
+      <source src="video.mp4" type="video/mp4">
+      Ваш браузер не поддерживает элемент <code>video</code>.
+    </video>
+    <div class="about-img">
+      <img src="/images/about-image1.svg" alt="img1" srcset="">
+      <img src="/images/about-image2.png" alt="img2" srcset="">
+    </div>
+  </section>
+  <section class="program">
+    <h2 class="program-title">Как проходит обучение</h2>
+    <ul class="program-list">
+      <li class="program-item">
+        <img src="/images/primage1.svg" alt="item1">
+        <h3 class="program-item-title">Комфортные аудитории</h3>
+        <p class="program-item-text">У нас много комфортных аудиторий, конференс залов и лабораторий. У вас будете
+          лычное рабочее место с персональным
+          компьютером.</p>
+      </li>
+      <li class="program-item">
+        <img src="/images/pimage2.svg" alt="item1" srcset="">
+        <h3 class="program-item-title">Современое оборудование</h3>
+        <p class="program-item-text">Наши партнеры: Cisko, Microsoft, Avtodesk, мировые лидеры в сфере IT. У вас будет
+          все необходимое оборудование и софт.</p>
+      </li>
+      <li class="program-item">
+        <img src="/images/pimage3.svg" alt="item1" srcset="">
+        <h3 class="program-item-title">Робота с преподавателями</h3>
+        <p class="program-item-text">Наши преподаватели практикующие дизайнеры. На каждом занятие Вы вместе будете
+          разбирать темы, выполнять задания,
+          разбирать реальные кейсы и проекты.</p>
+      </li>
+      <li class="program-item">
+        <img src="/images/pimage4.svg" alt="item1" srcset="">
+        <h3 class="program-item-title">Лекции, вебинары и воркшопы</h3>
+        <p class="program-item-text">Мы часто приглашаем известных экспертов из индустрии которые делаться полезными
+          знаниями и секретами своей работы.</p>
+      </li>
+      <li class="program-item">
+        <img src="/images/pimage6.svg" alt="item1" srcset="">
+        <h3 class="program-item-title">Робота с реальними проектами</h3>
+        <p class="program-item-text">У вас будет возможность разобраться и поработать над реальными проектами еще на
+          этапе обучения.</p>
+      </li>
+      <li class="program-item">
+        <img src="/images/pimage5.svg" alt="item1" srcset="">
+        <h3 class="program-item-title">Формирование портфолио</h3>
+        <p class="program-item-text">За период обучение вы соберёте свое портфолио из выполненных заданий, курсовых и
+          дипломных проектов.</p>
+      </li>
+    </ul>
+    <div class="program-course">
+      <h2 class="program-course-title">Программа курса</h2>
+      <ul class="program-course-list">
+        <li class="program-course-item program-course-item__arrow">
+          <h2>2D графика и макетирование</h2>
+          <button class="header-nav-link-arrow">
+            <img src="/images/chevron-down.png" alt="">
+          </button>
+        </li>
+        <li class="program-course-item">
+          <h2>Графический редактор Adobe Photoshop</h2>
+          <img src="/images/underline.png" alt="">
+        </li>
+        <li class="program-course-item">
+          <h2>Графический редактор Adobe Illustrator</h2>
+          <img src="/images/underline.png" alt="">
+        </li>
+        <li class="program-course-item">
+          <h2>Рисунок</h2>
+          <img src="/images/underline.png" alt="">
+        </li>
+        <li class="program-course-item">
+          <h2>История искусства</h2>
+          <img src="/images/underline.png" alt="">
+        </li>
+        <li class="program-course-item">
+          <h2>Цифровая фотография</h2>
+          <img src="/images/underline.png" alt="">
+        </li>
+        <li class="program-course-item">
+          <h2>Теория дизайна</h2>
+          <img src="/images/underline.png" alt="">
+        </li>
+        <li class="program-course-item">
+          <h2>Корпоративная айдентика и брэндинг</h2>
+          <img src="/images/underline.png" alt="">
+        </li>
+        <li class="program-course-item">
+          <h2>Рекламный дизайн</h2>
+          <img src="/images/underline.png" alt="">
+        </li>
+        <li class="program-course-item">
+          <h2>Типографика</h2>
+          <img src="/images/underline.png" alt="">
+        </li>
+        <li class="program-course-item">
+          <h2>Издательская система Adobe InDesign</h2>
+          <img src="/images/underline.png" alt="">
+        </li>
+        <li class="program-course-item">
+          <h2>Допечатная подготовка</h2>
+          <img src="/images/underline.png" alt="">
+        </li>
+        <li class="program-course-item program-course-item__arrow">
+          <h2>Wев-дисциплины</h2>
+          <button class="header-nav-link-arrow ">
+            <img src="/images/chevron-down.png" alt="">
+          </button>
+        </li>
+        <li class="program-course-item program-course-item__arrow">
+          <h2>3D Графика</h2>
+          <button class="header-nav-link-arrow">
+            <img src="/images/chevron-down.png" alt="">
+          </button>
+        </li>
+        <li class="program-course-item program-course-item__arrow">
+          <h2>Анимация и видео</h2>
+          <button class="header-nav-link-arrow">
+            <img src="/images/chevron-down.png" alt="">
+          </button>
+        </li>
+      </ul>
+      <button class="program-course-button">Скачать детальную программу</button>
+    </div>
+  </section>
+  <section class="team">
+    <h2 class="team-title">Наша команда - наша сила</h2>
+    <p class="team-describe">Все наши преподаватели – профессионалы своего дела, и каждый из них – практикующий
+      специалист, который досконально знает
+      предмет и постоянно работает над повышением уровня квалификации. Если Ваша цель – получить актуальные и
+      разносторонние
+      знания и навыки по предмету – можете быть уверены, что нашим преподавателям в этом нет равных. Они обожают
+      нестандартные
+      и каверзные вопросы, сложные задачи и не боятся творческих и любознательных студентов.</p>
+    <div class="mobile-slider">
+      <div class="slide"><img src="/images/photo1.png" alt="Image 1"></div>
+      <div class="slide"><img src="/images/photo2.png" alt="Image 2"></div>
+      <div class="slide"><img src="/images/photo3.png" alt="Image 3"></div>
+      <div class="slide"><img src="/images/photo4.png" alt="Image 4"></div>
+      <div class="slide"><img src="/images/photo5.png" alt="Image 5"></div>
+      <div class="slide"><img src="/images/photo6.png" alt="Image 6"></div>
+    </div>
+    <div class="desktop-grid">
+      <div class="grid-block">
+        <div class="top">
+          <img src="/images/photo1.png" alt="Image 1">
+        </div>
+        <div class="bottom">
+          <img src="/images/photo2.png" alt="Image 2">
+          <img src="/images/photo3.png" alt="Image 3">
+        </div>
+      </div>
+      <div class="grid-block">
+        <div class="top">
+          <img src="/images/photo4.png" alt="Image 4">
+        </div>
+        <div class="bottom">
+          <img src="/images/photo5.png" alt="Image 5">
+          <img src="/images/photo6.png" alt="Image 6">
+        </div>
+      </div>
     </div>
 
-    <div class="block-images">
 
+
+
+  </section>
+  <section class="format">
+    <h2 class="format-title">Формат занятий и стоимость</h2>
+    <div class="format-block">
+      <h3 class="format-block-title">Стационар</h3>
+      <ul class="format-info-list">
+        <li class="format-info-item">
+          <h3>Длительность курса:</h3>
+          <p>5 семестров - 2,5 года</p>
+        </li>
+        <li class="format-info-item">
+          <h3>График:</h3>
+          <p>3 раза в неделю по 2 пары</p>
+        </li>
+        <li class="format-info-item">
+          <h3>Возраст:</h3>
+          <p>9 - 55 лет</p>
+        </li>
+        <li class="format-info-item">
+          <h3>Язык курса:</h3>
+          <p>Украинский</p>
+        </li>
+      </ul>
+      <ul class="format-cost-list">
+        <li class="format-cost-list-item">
+          <h3>Оплата частями</h3>
+          <p>
+          <h2 class="format-number">3920</h2><span>грн/мес</span></p>
+
+        </li>
+        <li class="format-cost-list-item">
+          <h3>Полная оплата</h3>
+
+          <h2 class="format-number">3053</h2>грн/мес
+          <p>При оплате за полный курс: 91 575 грн</p>
+        </li>
+        <li class="format-cost-list-item">
+          <button>Оставить заявку</button>
+          <button>Заключить договор</button>
+        </li>
+      </ul>
     </div>
-  </div>
+    <div class="format-block">
+      <h3 class="format-block-title">Полустационар</h3>
+      <ul class="format-info-list">
+        <li class="format-info-item">
+          <h3>Длительность курса:</h3>
+          <p>5 семестров - 2,5 года</p>
+        </li>
+        <li class="format-info-item">
+          <h3>График:</h3>
+          <p>3 раза в неделю по 2 пары</p>
+        </li>
+        <li class="format-info-item">
+          <h3>Возраст:</h3>
+          <p>9 - 55 лет</p>
+        </li>
+        <li class="format-info-item">
+          <h3>Язык курса:</h3>
+          <p>Украинский</p>
+        </li>
+      </ul>
+      <ul class="format-cost-list">
+        <li class="format-cost-list-item">
+          <h3>Оплата частями</h3>
+          <p>
+          <h2 class="format-number">3920</h2><span>грн/мес</span></p>
 
+        </li>
+        <li class="format-cost-list-item">
+          <h3>Полная оплата</h3>
+
+          <h2 class="format-number">3053</h2>грн/мес
+          <p>При оплате за полный курс: 91 575 грн</p>
+        </li>
+        <li class="format-cost-list-item">
+          <button>Оставить заявку</button>
+          <button>Заключить договор</button>
+        </li>
+      </ul>
+    </div>
+  </section>
 </body>
 
 </html>
