--- a/index.html
+++ b/index.html
@@ -106,117 +106,152 @@
       <li class="program-item">
         <img src="/images/primage1.svg" alt="item1">
         <h3 class="program-item-title">Комфортные аудитории</h3>
-        <p class="program-item-text">У нас много комфортных аудиторий, конференс залов и лабораторий. У вас будете
-          лычное рабочее место с персональным
-          компьютером.</p>
+        <p class="program-item-text">
+          У нас много комфортных аудиторий, конференс залов и лабораторий.
+          У вас будет личное рабочее место с персональным компьютером.
+        </p>
       </li>
       <li class="program-item">
-        <img src="/images/pimage2.svg" alt="item1" srcset="">
-        <h3 class="program-item-title">Современое оборудование</h3>
-        <p class="program-item-text">Наши партнеры: Cisko, Microsoft, Avtodesk, мировые лидеры в сфере IT. У вас будет
-          все необходимое оборудование и софт.</p>
+        <img src="/images/pimage2.svg" alt="item2">
+        <h3 class="program-item-title">Современное оборудование</h3>
+        <p class="program-item-text">
+          Наши партнеры: Cisko, Microsoft, Avtodesk – мировые лидеры в сфере IT.
+          У вас будет всё необходимое оборудование и софт.
+        </p>
       </li>
       <li class="program-item">
-        <img src="/images/pimage3.svg" alt="item1" srcset="">
-        <h3 class="program-item-title">Робота с преподавателями</h3>
-        <p class="program-item-text">Наши преподаватели практикующие дизайнеры. На каждом занятие Вы вместе будете
-          разбирать темы, выполнять задания,
-          разбирать реальные кейсы и проекты.</p>
+        <img src="/images/pimage3.svg" alt="item3">
+        <h3 class="program-item-title">Работа с преподавателями</h3>
+        <p class="program-item-text">
+          Наши преподаватели – практикующие дизайнеры. На каждом занятии вы вместе будете разбирать темы,
+          выполнять задания, рассматривать реальные кейсы и проекты.
+        </p>
       </li>
       <li class="program-item">
-        <img src="/images/pimage4.svg" alt="item1" srcset="">
+        <img src="/images/pimage4.svg" alt="item4">
         <h3 class="program-item-title">Лекции, вебинары и воркшопы</h3>
-        <p class="program-item-text">Мы часто приглашаем известных экспертов из индустрии которые делаться полезными
-          знаниями и секретами своей работы.</p>
+        <p class="program-item-text">
+          Мы часто приглашаем известных экспертов из индустрии, которые делятся полезными знаниями
+          и секретами своей работы.
+        </p>
       </li>
       <li class="program-item">
-        <img src="/images/pimage6.svg" alt="item1" srcset="">
-        <h3 class="program-item-title">Робота с реальними проектами</h3>
-        <p class="program-item-text">У вас будет возможность разобраться и поработать над реальными проектами еще на
-          этапе обучения.</p>
+        <img src="/images/pimage6.svg" alt="item5">
+        <h3 class="program-item-title">Работа с реальными проектами</h3>
+        <p class="program-item-text">
+          У вас будет возможность разобраться и поработать над реальными проектами ещё на этапе обучения.
+        </p>
       </li>
       <li class="program-item">
-        <img src="/images/pimage5.svg" alt="item1" srcset="">
+        <img src="/images/pimage5.svg" alt="item6">
         <h3 class="program-item-title">Формирование портфолио</h3>
-        <p class="program-item-text">За период обучение вы соберёте свое портфолио из выполненных заданий, курсовых и
-          дипломных проектов.</p>
+        <p class="program-item-text">
+          За период обучения вы соберёте своё портфолио из выполненных заданий, курсовых и дипломных проектов.
+        </p>
       </li>
     </ul>
+
     <div class="program-course">
       <h2 class="program-course-title">Программа курса</h2>
+
       <ul class="program-course-list">
+        <!-- Пример пункта со вложенным списком -->
         <li class="program-course-item program-course-item__arrow">
-          <h2>2D графика и макетирование</h2>
-          <button class="header-nav-link-arrow">
-            <img src="/images/chevron-down.png" alt="">
-          </button>
+          <div class="program-course-item-header">
+            <h2>2D графика и макетирование</h2>
+            <!-- Кнопка "открыть" -->
+            <button class="header-nav-link-arrow open-list-btn">
+              <img src="/images/chevron-down.png" alt="Open dropdown">
+            </button>
+            <!-- Кнопка "закрыть" (изначально скрыта) -->
+            <button class="header-nav-link-arrow close-list-btn" style="display: none;">
+              <img src="/images/close-list.png" alt="Close dropdown">
+            </button>
+          </div>
+
+          <!-- Выпадающий подсписок -->
+          <ul class="program-course-sublist">
+            <li class="program-course-item">
+              <h2>Графический редактор Adobe Photoshop</h2>
+              <img src="/images/underline.png" alt="underline">
+            </li>
+            <li class="program-course-item">
+              <h2>Графический редактор Adobe Illustrator</h2>
+              <img src="/images/underline.png" alt="underline">
+            </li>
+            <li class="program-course-item">
+              <h2>Рисунок</h2>
+              <img src="/images/underline.png" alt="underline">
+            </li>
+            <li class="program-course-item">
+              <h2>История искусства</h2>
+              <img src="/images/underline.png" alt="underline">
+            </li>
+            <li class="program-course-item">
+              <h2>Цифровая фотография</h2>
+              <img src="/images/underline.png" alt="underline">
+            </li>
+            <li class="program-course-item">
+              <h2>Теория дизайна</h2>
+              <img src="/images/underline.png" alt="underline">
+            </li>
+            <li class="program-course-item">
+              <h2>Корпоративная айдентика и брендинг</h2>
+              <img src="/images/underline.png" alt="underline">
+            </li>
+            <li class="program-course-item">
+              <h2>Рекламный дизайн</h2>
+              <img src="/images/underline.png" alt="underline">
+            </li>
+            <li class="program-course-item">
+              <h2>Типографика</h2>
+              <img src="/images/underline.png" alt="underline">
+            </li>
+            <li class="program-course-item">
+              <h2>Издательская система Adobe InDesign</h2>
+              <img src="/images/underline.png" alt="underline">
+            </li>
+            <li class="program-course-item">
+              <h2>Допечатная подготовка</h2>
+              <img src="/images/underline.png" alt="underline">
+            </li>
+          </ul>
         </li>
-        <li class="program-course-item">
-          <h2>Графический редактор Adobe Photoshop</h2>
-          <img src="/images/underline.png" alt="">
-        </li>
-        <li class="program-course-item">
-          <h2>Графический редактор Adobe Illustrator</h2>
-          <img src="/images/underline.png" alt="">
-        </li>
-        <li class="program-course-item">
-          <h2>Рисунок</h2>
-          <img src="/images/underline.png" alt="">
-        </li>
-        <li class="program-course-item">
-          <h2>История искусства</h2>
-          <img src="/images/underline.png" alt="">
-        </li>
-        <li class="program-course-item">
-          <h2>Цифровая фотография</h2>
-          <img src="/images/underline.png" alt="">
-        </li>
-        <li class="program-course-item">
-          <h2>Теория дизайна</h2>
-          <img src="/images/underline.png" alt="">
-        </li>
-        <li class="program-course-item">
-          <h2>Корпоративная айдентика и брэндинг</h2>
-          <img src="/images/underline.png" alt="">
-        </li>
-        <li class="program-course-item">
-          <h2>Рекламный дизайн</h2>
-          <img src="/images/underline.png" alt="">
-        </li>
-        <li class="program-course-item">
-          <h2>Типографика</h2>
-          <img src="/images/underline.png" alt="">
-        </li>
-        <li class="program-course-item">
-          <h2>Издательская система Adobe InDesign</h2>
-          <img src="/images/underline.png" alt="">
-        </li>
-        <li class="program-course-item">
-          <h2>Допечатная подготовка</h2>
-          <img src="/images/underline.png" alt="">
-        </li>
+
+        <!-- Остальные пункты без подсписка (или тоже можно сделать раскрывающимися) -->
         <li class="program-course-item program-course-item__arrow">
           <h2>Wев-дисциплины</h2>
-          <button class="header-nav-link-arrow ">
-            <img src="/images/chevron-down.png" alt="">
+          <button class="header-nav-link-arrow open-list-btn">
+            <img src="/images/chevron-down.png" alt="Open dropdown">
+          </button>
+          <button class="header-nav-link-arrow close-list-btn" style="display: none;">
+            <img src="/images/close-list.png" alt="Close dropdown">
           </button>
         </li>
         <li class="program-course-item program-course-item__arrow">
           <h2>3D Графика</h2>
-          <button class="header-nav-link-arrow">
-            <img src="/images/chevron-down.png" alt="">
+          <button class="header-nav-link-arrow open-list-btn">
+            <img src="/images/chevron-down.png" alt="Open dropdown">
+          </button>
+          <button class="header-nav-link-arrow close-list-btn" style="display: none;">
+            <img src="/images/close-list.png" alt="Close dropdown">
           </button>
         </li>
         <li class="program-course-item program-course-item__arrow">
           <h2>Анимация и видео</h2>
-          <button class="header-nav-link-arrow">
-            <img src="/images/chevron-down.png" alt="">
+          <button class="header-nav-link-arrow open-list-btn">
+            <img src="/images/chevron-down.png" alt="Open dropdown">
+          </button>
+          <button class="header-nav-link-arrow close-list-btn" style="display: none;">
+            <img src="/images/close-list.png" alt="Close dropdown">
           </button>
         </li>
       </ul>
+
       <button class="program-course-button">Скачать детальную программу</button>
     </div>
   </section>
+
   <section class="team">
     <h2 class="team-title">Наша команда - наша сила</h2>
     <p class="team-describe">Все наши преподаватели – профессионалы своего дела, и каждый из них – практикующий
@@ -340,6 +375,7 @@
       </ul>
     </div>
   </section>
+  <script src="/index.js"></script>
 </body>
 
 </html>
