--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sintegrum-test</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,11 +16,11 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="about.css">
+  <link rel="stylesheet" href="format.css">
   <link rel="stylesheet" href="program.css">
   <link rel="stylesheet" href="team.css">
-  <link rel="stylesheet" href="format.css">
-
 </head>
 
 <body>
@@ -48,7 +49,8 @@
           <li class="header-nav-item">
             <a href="#" class="header-nav-link">Мероприятия</a>
           </li>
-          <li class="header-nav-item"><a href="#" class="header-nav-link">Об Академии</a>
+          <li class="header-nav-item">
+            <a href="#" class="header-nav-link">Об Академии</a>
             <button class="header-nav-link-arrow">
               <img src="/images/chevron-down.png" alt="">
             </button>
@@ -63,41 +65,42 @@
               </button>
             </a>
           </li>
-
         </ul>
       </nav>
-      <a class="header-nav-item header-nav-item--phone"><a href="#" class="header-nav-link">+38 (044) 537 22 60</a>
+      <a class="header-nav-item header-nav-item--phone" href="#">
+        <span class="header-nav-link">+38 (044) 537 22 60</span>
         <button class="header-nav-link-arrow">
           <img src="/images/chevron-down.png" alt="">
         </button>
       </a>
+    </div>
   </header>
   <section class="main">
     <img src="/images/Ellipse.png" alt="ellipse">
     <div class="text-block">
-      <h1 class="text-block-title">Компьютерная
-        графика и дизайн</h1>
-      <p class="text-block-text">Научим зарабативать на своем творчестве</p>
+      <h1 class="text-block-title">Компьютерная<br>графика и дизайн</h1>
+      <p class="text-block-text">Научим зарабатывать на своем творчестве</p>
       <button class="text-block-button">Записаться на курс</button>
     </div>
     <div class="men-block">
-      <img src="/images/Group-22513.png" alt="img" srcset="">
+      <img src="/images/Group-22513.png" alt="img">
     </div>
   </section>
   <section class="about">
     <h2 class="about-title">Коротко о курсе</h2>
-    <p class="about-text">Если вы ищете творческую современную профессию тогда этот курс для вас. Мы научим вас как
+    <p class="about-text">
+      Если вы ищете творческую современную профессию тогда этот курс для вас. Мы научим вас как
       создавать сайты и мобильные приложение, работать с видео и анимацией, рисовать иллюстрации. Вы научитесь работать
       в 3D: создавать персонажей, игровые локации, интерьеры та экстерьеры. Мы поможем освоить все необходимые
-      инструменты с нуля.</p>
-
-    <video class="about-video" width="1060" height="600" controls>
+      инструменты с нуля.
+    </p>
+    <video class="about-video" controls>
       <source src="video.mp4" type="video/mp4">
       Ваш браузер не поддерживает элемент <code>video</code>.
     </video>
     <div class="about-img">
-      <img src="/images/about-image1.svg" alt="img1" srcset="">
-      <img src="/images/about-image2.png" alt="img2" srcset="">
+      <img src="/images/about-image1.svg" alt="img1">
+      <img src="/images/about-image2.png" alt="img2">
     </div>
   </section>
   <section class="program">
@@ -150,26 +153,19 @@
         </p>
       </li>
     </ul>
-
     <div class="program-course">
       <h2 class="program-course-title">Программа курса</h2>
-
       <ul class="program-course-list">
-        <!-- Пример пункта со вложенным списком -->
         <li class="program-course-item program-course-item__arrow">
           <div class="program-course-item-header">
             <h2>2D графика и макетирование</h2>
-            <!-- Кнопка "открыть" -->
             <button class="header-nav-link-arrow open-list-btn">
               <img src="/images/chevron-down.png" alt="Open dropdown">
             </button>
-            <!-- Кнопка "закрыть" (изначально скрыта) -->
-            <button class="header-nav-link-arrow close-list-btn" style="display: none;">
+            <button class="header-nav-link-arrow close-list-btn">
               <img src="/images/close-list.png" alt="Close dropdown">
             </button>
           </div>
-
-          <!-- Выпадающий подсписок -->
           <ul class="program-course-sublist">
             <li class="program-course-item">
               <h2>Графический редактор Adobe Photoshop</h2>
@@ -217,10 +213,8 @@
             </li>
           </ul>
         </li>
-
-        <!-- Остальные пункты без подсписка (или тоже можно сделать раскрывающимися) -->
-        <li class="program-course-item program-course-item__arrow">
-          <h2>Wев-дисциплины</h2>
+        <li class="program-course-item--variant program-course-item__arrow">
+          <h2>Веб-дисциплины</h2>
           <button class="header-nav-link-arrow open-list-btn">
             <img src="/images/chevron-down.png" alt="Open dropdown">
           </button>
@@ -228,7 +222,7 @@
             <img src="/images/close-list.png" alt="Close dropdown">
           </button>
         </li>
-        <li class="program-course-item program-course-item__arrow">
+        <li class="program-course-item--variant program-course-item__arrow">
           <h2>3D Графика</h2>
           <button class="header-nav-link-arrow open-list-btn">
             <img src="/images/chevron-down.png" alt="Open dropdown">
@@ -237,7 +231,7 @@
             <img src="/images/close-list.png" alt="Close dropdown">
           </button>
         </li>
-        <li class="program-course-item program-course-item__arrow">
+        <li class="program-course-item--variant program-course-item__arrow">
           <h2>Анимация и видео</h2>
           <button class="header-nav-link-arrow open-list-btn">
             <img src="/images/chevron-down.png" alt="Open dropdown">
@@ -247,20 +241,18 @@
           </button>
         </li>
       </ul>
-
       <button class="program-course-button">Скачать детальную программу</button>
     </div>
   </section>
-
   <section class="team">
     <h2 class="team-title">Наша команда - наша сила</h2>
-    <p class="team-describe">Все наши преподаватели – профессионалы своего дела, и каждый из них – практикующий
-      специалист, который досконально знает
-      предмет и постоянно работает над повышением уровня квалификации. Если Ваша цель – получить актуальные и
-      разносторонние
-      знания и навыки по предмету – можете быть уверены, что нашим преподавателям в этом нет равных. Они обожают
-      нестандартные
-      и каверзные вопросы, сложные задачи и не боятся творческих и любознательных студентов.</p>
+    <p class="team-describe">
+      Все наши преподаватели – профессионалы своего дела, и каждый из них – практикующий специалист,
+      который досконально знает предмет и постоянно работает над повышением уровня квалификации. Если
+      Ваша цель – получить актуальные и разносторонние знания и навыки по предмету – можете быть уверены,
+      что нашим преподавателям в этом нет равных. Они обожают нестандартные и каверзные вопросы, сложные задачи
+      и не боятся творческих и любознательных студентов.
+    </p>
     <div class="mobile-slider">
       <div class="slide"><img src="/images/photo1.png" alt="Image 1"></div>
       <div class="slide"><img src="/images/photo2.png" alt="Image 2"></div>
@@ -289,10 +281,6 @@
         </div>
       </div>
     </div>
-
-
-
-
   </section>
   <section class="format">
     <h2 class="format-title">Формат занятий и стоимость</h2>
@@ -320,13 +308,14 @@
         <li class="format-cost-list-item">
           <h3>Оплата частями</h3>
           <p>
-          <h2 class="format-number">3920</h2><span>грн/мес</span></p>
-
+            <span class="format-number">3920</span>грн/мес
+          </p>
         </li>
         <li class="format-cost-list-item">
           <h3>Полная оплата</h3>
-
-          <h2 class="format-number">3053</h2>грн/мес
+          <p>
+            <span class="format-number">3053</span>грн/мес
+          </p>
           <p>При оплате за полный курс: 91 575 грн</p>
         </li>
         <li class="format-cost-list-item">
@@ -359,13 +348,14 @@
         <li class="format-cost-list-item">
           <h3>Оплата частями</h3>
           <p>
-          <h2 class="format-number">3920</h2><span>грн/мес</span></p>
-
+            <span class="format-number">3920</span>грн/мес
+          </p>
         </li>
         <li class="format-cost-list-item">
           <h3>Полная оплата</h3>
-
-          <h2 class="format-number">3053</h2>грн/мес
+          <p>
+            <span class="format-number">3053</span>грн/мес
+          </p>
           <p>При оплате за полный курс: 91 575 грн</p>
         </li>
         <li class="format-cost-list-item">
